--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,12 +16,29 @@ services:
       - KC_HOSTNAME=http://localhost:8080
       - KC_HOSTNAME_STRICT=false
       - KC_HOSTNAME_BACKCHANNEL_DYNAMIC=true
+      - KC_DB=postgres
+      - KC_DB_URL=jdbc:postgresql://keycloak-db:5432/keycloak
+      - KC_DB_USERNAME=keycloak
+      - KC_DB_PASSWORD=keycloak
     ports:
       - "8080:8080"
     volumes:
       - ./infra/collabdraw.json:/opt/keycloak/data/import/collabdraw.json:ro
-      - keycloak-data:/opt/keycloak/data
     restart: unless-stopped
+    depends_on:
+      - keycloak-db
+
+  keycloak-db:
+    image: postgres:17
+    restart: always
+    ports:
+      - 5432:5432
+    environment:
+      - POSTGRES_DB=keycloak
+      - POSTGRES_USER=keycloak
+      - POSTGRES_PASSWORD=keycloak
+    volumes:
+      - keycloak-db-data:/var/lib/postgresql/data
 
   api:
     build: ./packages/api
@@ -86,3 +103,4 @@ services:
 volumes:
   mongo-data:
   keycloak-data:
+  keycloak-db-data:
